# Rendezvous-Hack-App

./: .gitignore  README.md  application.yaml  registry.toml  start-server.sh  start-studio.sh
agents/Coral-FirecrawlMCP-Agent/: coral-agent.toml  main.py
agents/Coral-Interface-Agent/: .env_sample  coral-agent.toml  main.py  pyproject.toml  run_agent.sh  test.py
agents/Coral-Interface-Agent/utils/: coral_config.py  prompts.py
agents/Coral-OpenDeepResearch-Agent/: .env_sample  .gitignore  Dockerfile  README.md  coral-agent.toml  main.py  odr.py  pyproject.toml  run_agent.sh
agents/Coral-OpenDeepResearch-Agent/.github/workflows/: docker-image.yml
agents/Coral-OpenDeepResearch-Agent/temp/: report.txt
agents/interface/: main.py
coral-server/: build.gradle.kts
coral-server/.github/workflows/: docker.yml
coral-server/src/main/resources/: application.yaml
coral-studio/: .gitignore  package.json
coral-studio/src/: app.css
coral-studio/src/lib/: color.ts  logs.svelte.ts  mcptools.ts  session.svelte.ts  socket.svelte.ts  threads.ts
coral-studio/src/lib/components/: app-sidebar.svelte  code-block.svelte  combobox.svelte  nav-bundle.svelte  server-switcher.svelte
coral-studio/src/lib/components/dialogs/: create-session.svelte
coral-studio/src/lib/components/tour/: tour.svelte
coral-studio/src/routes/: +error.svelte
coral-studio/src/routes/logs/: +page.svelte
coral-studio/src/routes/registry/: +page.svelte
hackvenv/: pyvenv.cfg
studio/: package.json
studio/src/routes/: +layout.svelte  +page.svelte
(+30 files in other folders)
