[project]
name = "coral-opendeepresearch-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-core>=1.34.0",
    "azure-search-documents>=11.5.2",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-experimental==0.3.4",
    "langchain-groq==0.3.4",
    "langchain-mcp-adapters==0.1.7",
    "langchain-openai==0.3.26",
    "open-deep-research>=0.0.15",
    "requests>=2.32.3",
    "uv>=0.7.17",
]
